added nest_asyncio to fix tornado version

--- a/environment.yml
+++ b/environment.yml
@@ -5,7 +5,7 @@ dependencies:
   - python=3.6.2
   - nb_conda==2.2.0
   - ipywidgets==7.3.0
-  # - tornado==4.5.3
+  - nest_asyncio
   - pandas==0.23.3
   - scikit-learn==0.19.1
   - pip:
@@ -18,4 +18,4 @@ dependencies:
     - papermill==0.14.1
     - git+https://github.com/theskumar/python-dotenv
     - azureml-sdk[notebooks]
-    - tornado==4.5.3
+    # - tornado==4.5.3
