--- a/environment.yml
+++ b/environment.yml
@@ -9,7 +9,7 @@ dependencies:
   - scikit-learn==0.19.1
   - pip:
     - aiohttp==3.3.2
-    - nest_asyncio
+    - nest_asyncio==0.9.10
     - toolz==0.9.0
     - tqdm==4.23.4
     - azure-cli==2.0.41
