--- a/environment.yml
+++ b/environment.yml
@@ -3,7 +3,8 @@ channels:
   - conda-forge
 dependencies:
   - python=3.6.2
-  - nb_conda==2.2.0
+  # - nb_conda==2.2.0
+  - nb_conda_kernels==2.1.0
   - ipywidgets==7.3.0
   - pandas==0.23.3
   - scikit-learn==0.19.1
