--- a/environment.yml
+++ b/environment.yml
@@ -13,7 +13,8 @@ dependencies:
     - nest_asyncio==0.9.10
     - toolz==0.9.0
     - tqdm==4.23.4
-    - azure-cli==2.0.41
+    - azure-cli==2.0.50
+    - prompt_toolkit==2.0.7
     - lightgbm==2.1.2
     - papermill==0.14.1
     - git+https://github.com/theskumar/python-dotenv
