--- a/environment.yml
+++ b/environment.yml
@@ -18,4 +18,4 @@ dependencies:
     - lightgbm==2.1.2
     - papermill==0.14.1
     - git+https://github.com/theskumar/python-dotenv
-    - azureml-sdk[notebooks]
+    - azureml-sdk[notebooks]==1.0.10
