--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,27 +12,21 @@ pool:
 variables:
 - group: AzureKeyVault
 
-steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
-
 - script: |
     echo Add other tasks to build, test, and deploy your project.
     echo See https://aka.ms/yaml
   displayName: 'Run a multi-line script'
 
 - bash: |
+    echo This UI is slow as shit
     source /usr/share/miniconda/etc/profile.d/conda.sh
     which conda
-    # conda env create -f environment.yml
-    # conda env list
-    # conda activate MLAKSDeployAML
-    # conda env list  
-  displayName: 'Conda install dependencies'
-
-- bash: |
+    conda env create -f environment.yml
+    conda env list
+    conda activate MLAKSDeployAML
+    conda env list  
+    echo Login Azure Account
     az login -t $(sptenent) --service-principal -u $(spidentity) --password $(spsecret)
-
-    # conda activate MLAKSDeployAML
-    # conda env list  
-  displayName: 'Conda install dependencies'
+    echo Execute Notebooks
+    papermill local/00_AML_Configuration.ipynb local/00_AML_Configuration_Output.ipynb --logoutput --no-progress-bar -k python3
+  displayName: 'Execute Notebooks'
