--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,6 +12,7 @@ pool:
 variables:
 - group: AzureKeyVault
 
+steps:
 - script: |
     echo Add other tasks to build, test, and deploy your project.
     echo See https://aka.ms/yaml
@@ -25,8 +26,10 @@ variables:
     conda env list
     conda activate MLAKSDeployAML
     conda env list  
+
     echo Login Azure Account
     az login -t $(sptenent) --service-principal -u $(spidentity) --password $(spsecret)
+    
     echo Execute Notebooks
     papermill local/00_AML_Configuration.ipynb local/00_AML_Configuration_Output.ipynb --logoutput --no-progress-bar -k python3
   displayName: 'Execute Notebooks'
