Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,7 +1,5 @@
 # Starter pipeline
-# Start with a minimal pipeline that you can customize to build and deploy your code.
-# Add steps that build, run tests, deploy, and more:
-# https://aka.ms/yaml
+# MLAKSDeploy Pipeline 
 
 trigger:
 - master
@@ -19,17 +17,17 @@ steps:
   displayName: 'Run a multi-line script'
 
 - bash: |
-    echo This UI is slow as shit
+    echo This UI is slow
     source /usr/share/miniconda/etc/profile.d/conda.sh
     which conda
     conda env create -f environment.yml
     conda env list
     conda activate MLAKSDeployAML
     conda env list  
-
     echo Login Azure Account
     az login -t $(sptenent) --service-principal -u $(spidentity) --password $(spsecret)
     
     echo Execute Notebooks
-    papermill 00_AML_Configuration.ipynb 00_AML_Configuration_Output.ipynb --log-output --no-progress-bar -k python3 -p subscription_id $(azuresubscription) -p resource_group $(azureresourcegroup) -p workspace_name $(workspacename) -p workspace_region $(azureregion)
+    papermill 00_AML_Configuration.ipynb 00_AML_Configuration_Output.ipynb --log-output --no-progress-bar -k python3 -p subscription_id $(azuresubscription) -p resource_group $(azureresourcegroup) -p workspace_name $(workspacename) -p workspace_region $(azureregion) -p tenant_id $(sptenent) -p username $(spidentity) -p password $(spsecret)
   displayName: 'Execute Notebooks'
+  
