Added in 03 and 04

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -49,3 +49,20 @@ jobs:
       papermill 02_Train_On_Local.ipynb 02_Train_On_Local_Output.ipynb --log-output --no-progress-bar -k python3 
     displayName: 'Execute 02_Train_On_Local.ipynb'
     timeoutInMinutes: 300
+
+  - bash: |
+      source /usr/share/miniconda/etc/profile.d/conda.sh
+      conda activate MLAKSDeployAML
+      echo Execute 03_Develop_Scoring_Script.ipynb
+      papermill 03_Develop_Scoring_Script.ipynb 03_Develop_Scoring_Script_Output.ipynb --log-output --no-progress-bar -k python3 
+    displayName: '03_Develop_Scoring_Script.ipynb'
+    timeoutInMinutes: 60
+
+  - bash: |
+      source /usr/share/miniconda/etc/profile.d/conda.sh
+      conda activate MLAKSDeployAML
+      echo Execute 04_Create_Image_Deploy_On_AKS.ipynb
+      papermill 04_Create_Image_Deploy_On_AKS.ipynb 04_Create_Image_Deploy_On_AKS_Output.ipynb --log-output --no-progress-bar -k python3 -p image_name $(aksimagename) -p aks_location $(azureregion) -p aks_name $(aksname) -p aks_service_name $(aksvcname)
+    displayName: '03_Develop_Scoring_Script.ipynb'
+    timeoutInMinutes: 60
+
