Add batch to build tags.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,8 +2,11 @@
 # MLAKSDeploy Pipeline 
 
 trigger:
-- master
-
+  batch: true
+  branches:
+    include:
+    - master
+    
 variables:
 - group: AzureKeyVault
 
