--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -93,3 +93,17 @@ jobs:
     displayName: '07_Tear_Down.ipynb'
     timeoutInMinutes: 60
 
+  - bash: |
+      source /usr/share/miniconda/etc/profile.d/conda.sh
+      conda activate MLAKSDeployAML
+      echo Execute Resource Group Delete
+      existResponse=$(az group exists -n $(azureresourcegroup))
+      if [ "$existResponse" == "true" ]; then
+        echo Deleting project resource group  
+        az group delete --name $(azureresourcegroup) --yes
+      else
+        echo Project resource group did not exist
+      fi
+      echo Done Cleanup
+    displayName: 'Backup Cleanup'
+    condition: or(canceled(),failed())
