--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,13 +18,7 @@ jobs:
     vmImage: 'Ubuntu-16.04'
 
   steps:
-  - script: |
-      echo Add other tasks to build, test, and deploy your project.
-      echo See https://aka.ms/yaml
-    displayName: 'Run a multi-line script'
-
   - bash: |
-      echo This UI is slow
       source /usr/share/miniconda/etc/profile.d/conda.sh
       which conda
       conda env create -f environment.yml
@@ -33,65 +27,77 @@ jobs:
       conda env list  
       echo Login Azure Account
       az login -t $(sptenent) --service-principal -u $(spidentity) --password $(spsecret)
-    
-      echo Execute 00_AML_Configuration.ipynb
-      papermill 00_AML_Configuration.ipynb 00_AML_Configuration_Output.ipynb --log-output --no-progress-bar -k python3 -p subscription_id $(azuresubscription) -p resource_group $(azureresourcegroup) -p workspace_name $(workspacename) -p workspace_region $(azureregion) -p tenant_id $(sptenent) -p username $(spidentity) -p password $(spsecret)
+      cd {{cookiecutter.project_name}}
+      echo Execute 00_AMLConfiguration.ipynb
+      papermill 00_AML_Configuration.ipynb 00_AML_Configuration_Output.ipynb \
+        --log-output \
+        --no-progress-bar \
+        -k python3 \
+        -p subscription_id $(azuresubscription) \
+        -p resource_group $(azureresourcegroup) \
+        -p workspace_name $(workspacename) \
+        -p workspace_region $(azureregion) \
+        -p tenant_id $(sptenent) \
+        -p username $(spidentity) \
+        -p password $(spsecret)
     displayName: '00_AML_Configuration.ipynb'
-  
-  - bash: |
-      source /usr/share/miniconda/etc/profile.d/conda.sh
-      conda activate MLAKSDeployAML
-      echo Execute 01_Data_Prep.ipynb
-      papermill 01_Data_Prep.ipynb 01_Data_Prep_Output.ipynb --log-output --no-progress-bar -k python3 
-    displayName: '01_Data_Prep.ipynb'
-  
-  - bash: |
-      source /usr/share/miniconda/etc/profile.d/conda.sh
-      conda activate MLAKSDeployAML
-      echo Execute 02_Train_On_Local.ipynb
-      papermill 02_Train_On_Local.ipynb 02_Train_On_Local_Output.ipynb --log-output --no-progress-bar -k python3 
-    displayName: '02_Train_On_Local.ipynb'
-    timeoutInMinutes: 300
+
+  - template: steps/papermill.yml
+    parameters:
+      notebook: 01_DataPrep.ipynb
+      location: {{cookiecutter.project_name}}
+
+  - template: steps/papermill.yml
+    parameters:
+      notebook: 02_TrainOnLocal.ipynb
+      location: {{cookiecutter.project_name}}
+
+  - template: steps/papermill.yml
+    parameters:
+      notebook: 03_DevelopScoringScript.ipynb
+      location: {{cookiecutter.project_name}}
+
+  - template: steps/papermill.yml
+    parameters:
+      notebook: 04_CreateImage.ipynb
+      location: {{cookiecutter.project_name}}
+
+  - template: steps/papermill.yml
+    parameters:
+      notebook: 06_SpeedTestWebApp.ipynb
+      location: {{cookiecutter.project_name}}/aks
+
+  - template: steps/papermill.yml
+    parameters:
+      notebook: 07_RealTimeScoring.ipynb
+      location: {{cookiecutter.project_name}}/aks
 
   - bash: |
       source /usr/share/miniconda/etc/profile.d/conda.sh
       conda activate MLAKSDeployAML
-      echo Execute 03_Develop_Scoring_Script.ipynb
-      papermill 03_Develop_Scoring_Script.ipynb 03_Develop_Scoring_Script_Output.ipynb --log-output --no-progress-bar -k python3 
-    displayName: '03_Develop_Scoring_Script.ipynb'
-    timeoutInMinutes: 60
+      cd {{cookiecutter.project_name}}/iotedge
+      echo Execute 05_DeployOnIOTedge.ipynb
+      cd iotedge
+      	mkdir ./data_folder
+      	cp ../data_folder/dupes_test.tsv ./data_folder
+      	papermill 05_DeployOnIOTedge.ipynb test.ipynb \
+      		--log-output \
+      		--no-progress-bar \
+      		-k python3 \
+      		-p iot_hub_name fstlstnameiothub \
+      		-p device_id mydevice \
+      		-p module_name mymodule
+    displayName: '05_DeployOnIOTedge.ipynb'
 
-  - bash: |
-      source /usr/share/miniconda/etc/profile.d/conda.sh
-      conda activate MLAKSDeployAML
-      echo Execute 04_Create_Image_Deploy_On_AKS.ipynb
-      papermill 04_Create_Image_Deploy_On_AKS.ipynb 04_Create_Image_Deploy_On_AKS_Output.ipynb --log-output --no-progress-bar -k python3 -p image_name $(aksimagename) -p aks_location $(azureregion) -p aks_name $(aksname) -p aks_service_name $(aksvcname)
-    displayName: '04_Create_Image_Deploy_On_AKS.ipynb'
-    timeoutInMinutes: 60
+  - template: steps/papermill.yml
+    parameters:
+      notebook: 08_TearDown.ipynb
+      location: {{cookiecutter.project_name}}/aks
 
-  - bash: |
-      source /usr/share/miniconda/etc/profile.d/conda.sh
-      conda activate MLAKSDeployAML
-      echo Execute 05_Speed_Test_WebApp.ipynb
-      papermill 05_Speed_Test_WebApp.ipynb 05_Speed_Test_WebApp_Output.ipynb --log-output --no-progress-bar -k python3 
-    displayName: '05_Speed_Test_WebApp.ipynb'
-    timeoutInMinutes: 60
-
-  - bash: |
-      source /usr/share/miniconda/etc/profile.d/conda.sh
-      conda activate MLAKSDeployAML
-      echo Execute 06_Real_Time_Scoring.ipynb
-      papermill 06_Real_Time_Scoring.ipynb 06_Real_Time_Scoring_Output.ipynb --log-output --no-progress-bar -k python3 
-    displayName: '06_Real_Time_Scoring.ipynb'
-    timeoutInMinutes: 60
-
-  - bash: |
-      source /usr/share/miniconda/etc/profile.d/conda.sh
-      conda activate MLAKSDeployAML
-      echo Execute 07_Tear_Down.ipynb
-      papermill 07_Tear_Down.ipynb 07_Tear_Down_Output.ipynb --log-output --no-progress-bar -k python3 
-    displayName: '07_Tear_Down.ipynb'
-    timeoutInMinutes: 60
+  - template: steps/papermill.yml
+    parameters:
+      notebook: 06_TearDown.ipynb
+      location: {{cookiecutter.project_name}}/iotedge
 
   - bash: |
       source /usr/share/miniconda/etc/profile.d/conda.sh
