--- a/azure-pipelines-staging.yml
+++ b/azure-pipelines-staging.yml
@@ -41,6 +41,11 @@ jobs:
         -p password $(spsecret)
     displayName: '00_AML_Configuration.ipynb'
 
+  - template: steps/papermill.yml
+    parameters:
+      notebook: 01_DataPrep.ipynb
+      location: {{cookiecutter.project_name}}
+
 
 
   - bash: |
