--- a/steps/papermill.yml
+++ b/steps/papermill.yml
@@ -2,6 +2,7 @@ parameters:
   notebook: 01_DataPrep.ipynb  # defaults for any parameters that aren't specified
   location: {{cookiecutter.project_name}}
 
+steps:
 - bash: |
     source /usr/share/miniconda/etc/profile.d/conda.sh
     conda activate MLAKSDeployAML
