--- a/steps/papermill.yml
+++ b/steps/papermill.yml
@@ -1,4 +1,8 @@
 
+parameters:
+  notebook: 01_DataPrep.ipynb  # defaults for any parameters that aren't specified
+  location: {{cookiecutter.project_name}}
+
 steps:
 - bash: |
     source /usr/share/miniconda/etc/profile.d/conda.sh
