--- a/jobs/build.yml
+++ b/jobs/build.yml
@@ -5,12 +5,11 @@ jobs:
   cancelTimeoutInMinutes: 2
   pool:
     vmImage: 'Ubuntu-16.04'
-
   steps:
   - bash: |
       source /usr/share/miniconda/etc/profile.d/conda.sh
       which conda
-      conda env create -f environment.yml
+      conda env create -f {{cookiecutter.project_name}}/environment.yml
       conda env list
       conda activate MLAKSDeployAML
       conda env list
@@ -18,7 +17,7 @@ jobs:
       az login -t $(sptenent) --service-principal -u $(spidentity) --password $(spsecret)
       cd {{cookiecutter.project_name}}
       echo Execute 00_AMLConfiguration.ipynb
-      papermill 00_AML_Configuration.ipynb 00_AML_Configuration_Output.ipynb \
+      papermill 00_AMLConfiguration.ipynb 00_AMLConfiguration_Output.ipynb \
         --log-output \
         --no-progress-bar \
         -k python3 \
@@ -34,59 +33,7 @@ jobs:
   - template: steps/papermill.yml
     parameters:
       notebook: 01_DataPrep.ipynb
-      location: {{cookiecutter.project_name}}
-
-  - template: steps/papermill.yml
-    parameters:
-      notebook: 02_TrainOnLocal.ipynb
-      location: {{cookiecutter.project_name}}
-
-  - template: steps/papermill.yml
-    parameters:
-      notebook: 03_DevelopScoringScript.ipynb
-      location: {{cookiecutter.project_name}}
-
-  - template: steps/papermill.yml
-    parameters:
-      notebook: 04_CreateImage.ipynb
-      location: {{cookiecutter.project_name}}
-
-  - template: steps/papermill.yml
-    parameters:
-      notebook: 06_SpeedTestWebApp.ipynb
-      location: {{cookiecutter.project_name}}/aks
-
-  - template: steps/papermill.yml
-    parameters:
-      notebook: 07_RealTimeScoring.ipynb
-      location: {{cookiecutter.project_name}}/aks
-
-  - bash: |
-      source /usr/share/miniconda/etc/profile.d/conda.sh
-      conda activate MLAKSDeployAML
-      cd {{cookiecutter.project_name}}/iotedge
-      echo Execute 05_DeployOnIOTedge.ipynb
-      cd iotedge
-      	mkdir ./data_folder
-      	cp ../data_folder/dupes_test.tsv ./data_folder
-      	papermill 05_DeployOnIOTedge.ipynb test.ipynb \
-      		--log-output \
-      		--no-progress-bar \
-      		-k python3 \
-      		-p iot_hub_name fstlstnameiothub \
-      		-p device_id mydevice \
-      		-p module_name mymodule
-    displayName: '05_DeployOnIOTedge.ipynb'
-
-  - template: steps/papermill.yml
-    parameters:
-      notebook: 08_TearDown.ipynb
-      location: {{cookiecutter.project_name}}/aks
-
-  - template: steps/papermill.yml
-    parameters:
-      notebook: 06_TearDown.ipynb
-      location: {{cookiecutter.project_name}}/iotedge
+      location: "{{cookiecutter.project_name}}"
 
   - bash: |
       source /usr/share/miniconda/etc/profile.d/conda.sh
@@ -102,4 +49,3 @@ jobs:
       echo Done Cleanup
     displayName: 'Backup Cleanup'
     condition: or(canceled(),failed())
-
