--- a/.ci/build.yml
+++ b/.ci/build.yml
@@ -59,7 +59,7 @@ jobs:
           --no-progress-bar \
           -k python3 \
           -p aks_name aksdeploy \
-          -p aks_location azureregion \
+          -p aks_location $(azureregion) \
           -p aks_service_name aksservice
 -
   - template: steps/papermill.yml
