--- a/.ci/steps/papermill.yml
+++ b/.ci/steps/papermill.yml
@@ -8,7 +8,7 @@ parameters:
 steps:
 - bash: |
     source /usr/share/miniconda/etc/profile.d/conda.sh
-    conda activate MLAKSDeployAML
+    source activate MLAKSDeployAML
     cd ${{parameters.location}}
     echo Execute ${{parameters.notebook}}
     papermill ${{parameters.notebook}} output.ipynb \
