--- a/.ci/build.yml
+++ b/.ci/build.yml
@@ -33,6 +33,13 @@ jobs:
       notebook: 01_DataPrep.ipynb
       location: "{{cookiecutter.project_name}}"
 
+  - bash: |
+      mkdir -f {{cookiecutter.project_name}}/iotedge/data_folder
+      mkdir -f {{cookiecutter.project_name}}/aks/data_folder
+      cp data_folder/*.tsv {{cookiecutter.project_name}}/iotedge/data_folder
+      cp data_folder/*.tsv {{cookiecutter.project_name}}/aks/data_folder
+    displayName: 'Copying data'
+
   - template: steps/papermill.yml
     parameters:
       notebook: 02_TrainOnLocal.ipynb
@@ -54,8 +61,6 @@ jobs:
       echo Execute 05_DeployOnAKS.ipynb
       export PYTHONPATH=$(pwd)/{{cookiecutter.project_name}}:${PYTHONPATH}
       cd {{cookiecutter.project_name}}/aks
-      mkdir ./data_folder
-      cp ../data_folder/dupes_test.tsv ./data_folder
       papermill 05_DeployOnAKS.ipynb test.ipynb \
           --log-output \
           --no-progress-bar \
@@ -81,8 +86,6 @@ jobs:
       export PYTHONPATH=$(pwd)/{{cookiecutter.project_name}}:${PYTHONPATH}
       cd {{cookiecutter.project_name}}/iotedge
       echo Execute 05_DeployOnIOTedge.ipynb
-      mkdir ./data_folder
-      cp ../data_folder/dupes_test.tsv ./data_folder
       papermill 05_DeployOnIOTedge.ipynb test.ipynb \
           --log-output \
           --no-progress-bar \
