--- a/.ci/build.yml
+++ b/.ci/build.yml
@@ -34,8 +34,8 @@ jobs:
       location: "{{cookiecutter.project_name}}"
 
   - bash: |
-      mkdir -f {{cookiecutter.project_name}}/iotedge/data_folder
-      mkdir -f {{cookiecutter.project_name}}/aks/data_folder
+      mkdir -p {{cookiecutter.project_name}}/iotedge/data_folder
+      mkdir -p {{cookiecutter.project_name}}/aks/data_folder
       cp data_folder/*.tsv {{cookiecutter.project_name}}/iotedge/data_folder
       cp data_folder/*.tsv {{cookiecutter.project_name}}/aks/data_folder
     displayName: 'Copying data'
