Fixes data location

--- a/.ci/build.yml
+++ b/.ci/build.yml
@@ -37,8 +37,8 @@ jobs:
       mkdir -p {{cookiecutter.project_name}}/iotedge/data_folder
       mkdir -p {{cookiecutter.project_name}}/aks/data_folder
       cd {{cookiecutter.project_name}}
-      cp data_folder/*.tsv {{cookiecutter.project_name}}/iotedge/data_folder
-      cp data_folder/*.tsv {{cookiecutter.project_name}}/aks/data_folder
+      cp data_folder/*.tsv iotedge/data_folder
+      cp data_folder/*.tsv aks/data_folder
     displayName: 'Copying data'
 
   - template: steps/papermill.yml
