--- a/{{cookiecutter.project_name}}/environment.yml
+++ b/{{cookiecutter.project_name}}/environment.yml
@@ -10,6 +10,7 @@ dependencies:
   - pandas==0.23.3
   - scikit-learn==0.19.1
   - pip:
+    - urllib3==1.23
     - aiohttp==3.3.2
     - nest_asyncio==0.9.10
     - toolz==0.9.0
@@ -19,4 +20,5 @@ dependencies:
     - lightgbm==2.1.2
     - papermill==0.14.1
     - git+https://github.com/theskumar/python-dotenv
-    - azureml-sdk[notebooks]==1.0.10
+    - azureml-sdk[notebooks]==1.0.10  
+
