--- a/.ci/build.yml
+++ b/.ci/build.yml
@@ -91,9 +91,9 @@ jobs:
           --log-output \
           --no-progress-bar \
           -k python3 \
-          -p iot_hub_name fstlstnameiothub \
-          -p device_id mydevice \
-          -p module_name mymodule
+          -p iot_hub_name "fstlstnameiothub" \
+          -p device_id "mydevice" \
+          -p module_name "mymodule"
     displayName: '05_DeployOnIOTedge.ipynb'
 
   - template: steps/papermill.yml
