Pinning AzureML version

--- a/{{cookiecutter.project_name}}/environment.yml
+++ b/{{cookiecutter.project_name}}/environment.yml
@@ -19,4 +19,4 @@ dependencies:
     - lightgbm>=2.1.2
     - papermill>=0.14.1
     - python-dotenv==0.10.1
-    - azureml-sdk[notebooks]
+    - azureml-sdk[notebooks]==1.0.33
