--- a/.ci/azure-pipelines.yml
+++ b/.ci/azure-pipelines.yml
@@ -93,30 +93,30 @@ jobs:
       notebook: 07_RealTimeScoring.ipynb
       location: "{{cookiecutter.project_name}}/aks"
 
-  - bash: |
-      source /usr/share/miniconda/etc/profile.d/conda.sh
-      conda activate MLAKSDeployAML
-      export PYTHONPATH=$(pwd)/{{cookiecutter.project_name}}:${PYTHONPATH}
-      cd {{cookiecutter.project_name}}/iotedge
-      echo Execute 05_DeployOnIOTedge.ipynb
-      papermill 05_DeployOnIOTedge.ipynb test.ipynb \
-          --log-output \
-          --no-progress-bar \
-          -k python3 \
-          -p iot_hub_name fstlstnameiothub \
-          -p device_id mydevice \
-          -p module_name mymodule
-    displayName: '05_DeployOnIOTedge.ipynb'
+#  - bash: |
+#      source /usr/share/miniconda/etc/profile.d/conda.sh
+#      conda activate MLAKSDeployAML
+#      export PYTHONPATH=$(pwd)/{{cookiecutter.project_name}}:${PYTHONPATH}
+#      cd {{cookiecutter.project_name}}/iotedge
+#      echo Execute 05_DeployOnIOTedge.ipynb
+#      papermill 05_DeployOnIOTedge.ipynb test.ipynb \
+#          --log-output \
+#          --no-progress-bar \
+#          -k python3 \
+#          -p iot_hub_name fstlstnameiothub \
+#          -p device_id mydevice \
+#          -p module_name mymodule
+#    displayName: '05_DeployOnIOTedge.ipynb'
 
   - template: steps/papermill.yml
     parameters:
       notebook: 08_TearDown.ipynb
       location: "{{cookiecutter.project_name}}/aks"
 
-  - template: steps/papermill.yml
-    parameters:
-      notebook: 06_TearDown.ipynb
-      location: "{{cookiecutter.project_name}}/iotedge"
+#  - template: steps/papermill.yml
+#    parameters:
+#      notebook: 06_TearDown.ipynb
+#      location: "{{cookiecutter.project_name}}/iotedge"
 
   - bash: |
       source /usr/share/miniconda/etc/profile.d/conda.sh
