--- a/.ci/azure-pipelines.yml
+++ b/.ci/azure-pipelines.yml
@@ -1,4 +1,23 @@
 # MLAKSDeploy Pipeline
+resources:
+  repositories:
+    - repository: aitemplates
+      type: github
+      name: microsoft/AI
+      endpoint: AIArchitecturesAndPractices-GitHub
+
+variables:
+  BuildConfiguration: Release
+  BuildBinariesDirectory: $(Build.BinariesDirectory)
+  BuildPlatform: any cpu
+  DotNetCoreBuildVersion: 2.2.108
+  DotNetRuntimeTarget: ubuntu.18.04-x64
+  AgentToolsDirectory: $(Agent.ToolsDirectory)
+  CloudPlatform: AzureCloud
+  ProductName: Trident
+  TridentWorkloadType: $(WorkloadType)
+  TridentWorkloadTypeShort: $(WorkloadTypeShort)
+  DeployLocations: eastus
 
 trigger:
   batch: true
@@ -7,123 +26,68 @@ trigger:
     - master
 
 jobs:
-- job: MLAKSDeployAMLJob
-  timeoutInMinutes: 300
-  cancelTimeoutInMinutes: 2
+- job: build_deploy_ai
+  displayName: 'Build deploy AI'
+  dependsOn:
+  - build_relayer_sources
+  condition: succeeded('build_relayer_sources')
+
   pool:
-    vmImage: 'Ubuntu-16.04'
+    name: AI-GPU
+    demands: USA
+  strategy:
+    maxParallel: 8
+    matrix: $[ dependencies.build_relayer_sources.outputs['GenDeployMatrix.DeployRegions'] ]
+  timeoutInMinutes: 180
+
+  workspace:
+    clean: all
+
+  variables:
+    DeploymentGuidTag: $[ dependencies.build_relayer_sources.outputs['GenDeployGuidTag.DeploymentGuid'] ]
+    DeploymentTimeStamp: $[ dependencies.build_relayer_sources.outputs['GenDeployTimeStamp.timeStamp'] ]
+    EnvironmentPrefix: $(TridentWorkloadType)-$(CloudPlatform)-$(DeployLocation)$(TestPostfix)
+    ResourcePrefix: $(TridentWorkloadTypeShort)-$(DeployLocation)$(TestPostfix)
+    EnvironmentContext: $(EnvironmentPrefix)-$(DeploymentGuidTag)
+    AIResourceGroupName: $(TridentWorkloadTypeShort)-$(DeployLocation)$(TestPostfix)
+
   steps:
-  - bash: |
-      source /usr/share/miniconda/etc/profile.d/conda.sh
-      which conda
-      conda env create -f {{cookiecutter.project_name}}/environment.yml
-      conda env list
-      conda activate MLAKSDeployAML
-      conda env list
-      echo Login Azure Account
-      az login -t $(sptenent) --service-principal -u $(spidentity) --password $(spsecret)
-      cd {{cookiecutter.project_name}}
-      echo Execute 00_AMLConfiguration.ipynb
-      papermill 00_AMLConfiguration.ipynb 00_AMLConfiguration_Output.ipynb \
-        --log-output \
-        --no-progress-bar \
-        -k python3 \
-        -p subscription_id $(azuresubscription) \
-        -p resource_group $(azureresourcegroup) \
-        -p workspace_name $(workspacename) \
-        -p workspace_region $(azureregion) \
-        -p image_name $(aksimagename)
-    displayName: '00_AML_Configuration.ipynb'
 
-  - template: steps/papermill.yml
-    parameters:
-      notebook: 01_DataPrep.ipynb
-      location: "{{cookiecutter.project_name}}"
+  #
+  # DL Workload Deployment
+  #
+    # use the ML team templates to build and deploy workloads for each region
+  - script: |
+      docker stop $(docker ps -a -q)
+      docker rm $(docker ps -a -q)
+      docker system prune -a -f
+      rm -rf AI
+      git clone --recurse-submodules https://github.com/microsoft/AI.git
+    displayName: 'git clone sources'
 
   - bash: |
-      mkdir -p {{cookiecutter.project_name}}/iotedge/data_folder
-      mkdir -p {{cookiecutter.project_name}}/aks/data_folder
-      cd {{cookiecutter.project_name}}
-      cp data_folder/*.tsv iotedge/data_folder
-      cp data_folder/*.tsv aks/data_folder
-    displayName: 'Copying data'
+      Deploy_Location_Short=$(echo $DeployLocation | cut -c1-12)
+      echo "##vso[task.setvariable variable=Deploy_Location_Short]$Deploy_Location_Short"
 
-  - template: steps/papermill.yml
+
+  - template: .ci/steps/deploy_steps.yml@aitemplates
     parameters:
-      notebook: 02_TrainOnLocal.ipynb
-      location: "{{cookiecutter.project_name}}"
-
-  - template: steps/papermill.yml
-    parameters:
-      notebook: 03_DevelopScoringScript.ipynb
-      location: "{{cookiecutter.project_name}}"
-
-  - template: steps/papermill.yml
-    parameters:
-      notebook: 04_CreateImage.ipynb
-      location: "{{cookiecutter.project_name}}"
-
-  - bash: |
-      source /usr/share/miniconda/etc/profile.d/conda.sh
-      conda activate MLAKSDeployAML
-      echo Execute 05_DeployOnAKS.ipynb
-      export PYTHONPATH=$(pwd)/{{cookiecutter.project_name}}:${PYTHONPATH}
-      cd {{cookiecutter.project_name}}/aks
-      papermill 05_DeployOnAKS.ipynb test.ipynb \
-          --log-output \
-          --no-progress-bar \
-          -k python3 \
-          -p aks_name $(aksname) \
-          -p aks_location $(azureregion) \
-          -p aks_service_name $(aksvcname)
-    displayName: '05_DeployOnAKS.ipynb'
-
-  - template: steps/papermill.yml
-    parameters:
-      notebook: 06_SpeedTestWebApp.ipynb
-      location: "{{cookiecutter.project_name}}/aks"
-
-  - template: steps/papermill.yml
-    parameters:
-      notebook: 07_RealTimeScoring.ipynb
-      location: "{{cookiecutter.project_name}}/aks"
-
-#  - bash: |
-#      source /usr/share/miniconda/etc/profile.d/conda.sh
-#      conda activate MLAKSDeployAML
-#      export PYTHONPATH=$(pwd)/{{cookiecutter.project_name}}:${PYTHONPATH}
-#      cd {{cookiecutter.project_name}}/iotedge
-#      echo Execute 05_DeployOnIOTedge.ipynb
-#      papermill 05_DeployOnIOTedge.ipynb test.ipynb \
-#          --log-output \
-#          --no-progress-bar \
-#          -k python3 \
-#          -p iot_hub_name fstlstnameiothub \
-#          -p device_id mydevice \
-#          -p module_name mymodule
-#    displayName: '05_DeployOnIOTedge.ipynb'
-
-  - template: steps/papermill.yml
-    parameters:
-      notebook: 08_TearDown.ipynb
-      location: "{{cookiecutter.project_name}}/aks"
-
-#  - template: steps/papermill.yml
-#    parameters:
-#      notebook: 06_TearDown.ipynb
-#      location: "{{cookiecutter.project_name}}/iotedge"
-
-  - bash: |
-      source /usr/share/miniconda/etc/profile.d/conda.sh
-      conda activate MLAKSDeployAML
-      echo Execute Resource Group Delete
-      existResponse=$(az group exists -n $(azureresourcegroup))
-      if [ "$existResponse" == "true" ]; then
-        echo Deleting project resource group
-        az group delete --name $(azureresourcegroup) --yes
-      else
-        echo Project resource group did not exist
-      fi
-      echo Done Cleanup
-    displayName: 'Backup Cleanup'
-    condition: or(canceled(),failed())
+      deployment_name: MLBatchDeployAMLJob
+      template: MLBatchDeployAMLJob.yml
+      azureSubscription: AzureCAT E2E Blue Steel (4110a755-2084-451d-a03f-2267f377e37a)
+      azure_subscription: 4110a755-2084-451d-a03f-2267f377e37a
+      azureresourcegroup: $(AIResourceGroupName)
+      workspacename: $(TridentWorkloadTypeShort)-$(DeployLocation)
+      azureregion: $(DeployLocation)
+      aksimagename: myimage
+      environment: $(EnvironmentContext)
+      doCleanup: False
+      alias: $(Build.QueuedBy)
+      project: $(TridentWorkloadTypeShort)
+      agent: "Hosted Ubuntu 1604"
+      ENVIRONMENT_PREFIX: $(EnvironmentPrefix)
+      deploymentguidtag: $(DeploymentGuidTag)
+      aks_name: $(TridentWorkloadTypeShort)$(Deploy_Location_Short)
+      python_path: "$(System.DefaultWorkingDirectory)/AI/submodules/DeployMLModelPipelines"
+      location: AI/submodules/DeployMLModelPipelines
+      python_secret_root: "./AI/"
