Update azure-pipelines.yml for Azure Pipelines

--- a/.ci/azure-pipelines.yml
+++ b/.ci/azure-pipelines.yml
@@ -4,7 +4,7 @@ resources:
     - repository: aitemplates
       type: github
       name: microsoft/AI
-      endpoint: AIArchitecturesAndPractices-GitHub
+      endpoint: microsoft
 
 variables:
   BuildConfiguration: Release
