--- a/.ci/azure-pipelines.yml
+++ b/.ci/azure-pipelines.yml
@@ -4,6 +4,7 @@ resources:
     - repository: aitemplates
       type: github
       name: microsoft/AI
+      endpoint: AIArchitecturesAndPractices-GitHub
 
 variables:
   BuildConfiguration: Release
