--- a/.ci/azure-pipelines.yml
+++ b/.ci/azure-pipelines.yml
@@ -71,8 +71,8 @@ jobs:
     parameters:
       deployment_name: MLBatchDeployAMLJob
       template: MLBatchDeployAMLJob.yml
-      azureSubscription: AzureCAT E2E Blue Steel (4110a755-2084-451d-a03f-2267f377e37a)
-      azure_subscription: 4110a755-2084-451d-a03f-2267f377e37a
+      azureSubscription: AG-AzureCAT-AIDevOps-Test-COGSNonProd-IO1685734 (0ca618d2-22a8-413a-96d0-0f1b531129c3)
+      azure_subscription: 0ca618d2-22a8-413a-96d0-0f1b531129c3
       azureresourcegroup: $(AIResourceGroupName)
       workspacename: $(TridentWorkloadTypeShort)-$(DeployLocation)
       azureregion: $(DeployLocation)
